@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -43,12 +43,14 @@ public class IntegerFormatFactory extends AbstractFormatFactory {
 
     private static class IntegerFormat extends AbstractNumberFormat<Integer> {
 
+        @Override
         public String format(Integer object) throws Exception {
             return object.toString();
         }
 
+        @Override
         public Integer parse(String string) throws Exception {
-            return new Integer(string);
+            return Integer.valueOf(string);
         }
 
     }
