@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -18,31 +18,29 @@ package org.apache.camel.component.jms;
 
 import java.util.LinkedHashMap;
 import java.util.Map;
+
 import javax.jms.ConnectionFactory;
 
 import org.apache.camel.CamelContext;
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.component.mock.MockEndpoint;
-import org.apache.camel.test.junit4.CamelTestSupport;
-import org.junit.Test;
+import org.apache.camel.test.junit5.CamelTestSupport;
+import org.junit.jupiter.api.Test;
 
 import static org.apache.camel.component.jms.JmsComponent.jmsComponentAutoAcknowledge;
 
-/**
- * @version 
- */
 public class JmsRouteUsingDifferentHeadersTest extends CamelTestSupport {
 
     @Test
     public void testUsingDifferentHeaderTypes() throws Exception {
-        Map<String, Object> headers = new LinkedHashMap<String, Object>();
-        headers.put("a", new Byte("65"));
+        Map<String, Object> headers = new LinkedHashMap<>();
+        headers.put("a", Byte.valueOf("65"));
         headers.put("b", Boolean.TRUE);
-        headers.put("c", new Double("44444"));
-        headers.put("d", new Float("55555"));
-        headers.put("e", new Integer("222"));
-        headers.put("f", new Long("7777777"));
-        headers.put("g", new Short("333"));
+        headers.put("c", Double.valueOf("44444"));
+        headers.put("d", Float.valueOf("55555"));
+        headers.put("e", Integer.valueOf("222"));
+        headers.put("f", Long.valueOf("7777777"));
+        headers.put("g", Short.valueOf("333"));
         headers.put("h", "Hello");
 
         MockEndpoint mock = getMockEndpoint("mock:result");
@@ -61,6 +59,7 @@ public class JmsRouteUsingDifferentHeadersTest extends CamelTestSupport {
         assertMockEndpointsSatisfied();
     }
 
+    @Override
     protected CamelContext createCamelContext() throws Exception {
         CamelContext camelContext = super.createCamelContext();
 
