@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -25,32 +25,31 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
 
+import org.apache.camel.BindToRegistry;
 import org.apache.camel.Exchange;
+import org.apache.camel.FailedToStartRouteException;
 import org.apache.camel.ProducerTemplate;
 import org.apache.camel.builder.RouteBuilder;
 import org.apache.camel.component.mock.MockEndpoint;
-import org.apache.camel.impl.DefaultExchange;
-import org.apache.camel.impl.JndiRegistry;
-import org.apache.camel.util.ExchangeHelper;
-import org.junit.Assert;
-import org.junit.Test;
+import org.apache.camel.support.DefaultExchange;
+import org.apache.camel.support.ExchangeHelper;
+import org.junit.jupiter.api.Test;
 import org.reactivestreams.Publisher;
 import reactor.core.Disposable;
 import reactor.core.publisher.Flux;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport {
 
     // ************************************************
     // Setup
     // ************************************************
-
-    @Override
-    protected JndiRegistry createRegistry() throws Exception {
-        JndiRegistry registry = super.createRegistry();
-        registry.bind("hello", new SampleBean());
-
-        return registry;
-    }
+    @BindToRegistry("hello")
+    private SampleBean bean = new SampleBean();
 
     public static class SampleBean {
         public String hello(String name) {
@@ -67,18 +66,18 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
         context.addRoutes(new RouteBuilder() {
             public void configure() {
                 from("direct:reactive")
-                    .to("reactive-streams:numbers");
+                        .to("reactive-streams:numbers");
             }
         });
 
         context.start();
         ProducerTemplate template = context.createProducerTemplate();
 
-        AtomicInteger value = new AtomicInteger(0);
+        AtomicInteger value = new AtomicInteger();
 
         Flux.from(crs.fromStream("numbers", Integer.class))
-            .doOnNext(res -> Assert.assertEquals(value.incrementAndGet(), res.intValue()))
-            .subscribe();
+                .doOnNext(res -> assertEquals(value.incrementAndGet(), res.intValue()))
+                .subscribe();
 
         template.sendBody("direct:reactive", 1);
         template.sendBody("direct:reactive", 2);
@@ -91,26 +90,26 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
             @Override
             public void configure() throws Exception {
                 from("timer:tick?period=5&repeatCount=30")
-                    .setBody()
+                        .setBody()
                         .header(Exchange.TIMER_COUNTER)
-                    .to("reactive-streams:tick");
+                        .to("reactive-streams:tick");
             }
         });
 
         final int num = 30;
         final CountDownLatch latch = new CountDownLatch(num);
-        final AtomicInteger value = new AtomicInteger(0);
+        final AtomicInteger value = new AtomicInteger();
 
         Flux.from(crs.fromStream("tick", Integer.class))
-            .doOnNext(res -> Assert.assertEquals(value.incrementAndGet(), res.intValue()))
-            .doOnNext(n -> latch.countDown())
-            .subscribe();
+                .doOnNext(res -> assertEquals(value.incrementAndGet(), res.intValue()))
+                .doOnNext(n -> latch.countDown())
+                .subscribe();
 
         context.start();
 
         latch.await(5, TimeUnit.SECONDS);
 
-        Assert.assertEquals(num, value.get());
+        assertEquals(num, value.get());
     }
 
     @Test
@@ -120,25 +119,25 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
             @Override
             public void configure() throws Exception {
                 from("direct:reactive")
-                    .to("reactive-streams:direct");
+                        .to("reactive-streams:direct");
             }
         });
 
         CountDownLatch latch1 = new CountDownLatch(2);
         Flux.from(crs.fromStream("direct", Integer.class))
-            .doOnNext(res -> latch1.countDown())
-            .subscribe();
+                .doOnNext(res -> latch1.countDown())
+                .subscribe();
 
         CountDownLatch latch2 = new CountDownLatch(2);
         Flux.from(crs.fromStream("direct", Integer.class))
-            .doOnNext(res -> latch2.countDown())
-            .subscribe();
+                .doOnNext(res -> latch2.countDown())
+                .subscribe();
 
         template.sendBody("direct:reactive", 1);
         template.sendBody("direct:reactive", 2);
 
-        Assert.assertTrue(latch1.await(5, TimeUnit.SECONDS));
-        Assert.assertTrue(latch2.await(5, TimeUnit.SECONDS));
+        assertTrue(latch1.await(5, TimeUnit.SECONDS));
+        assertTrue(latch2.await(5, TimeUnit.SECONDS));
     }
 
     @Test
@@ -147,8 +146,8 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
             @Override
             public void configure() throws Exception {
                 from("timer:tick?period=50")
-                    .setBody().header(Exchange.TIMER_COUNTER)
-                    .to("reactive-streams:tick");
+                        .setBody().header(Exchange.TIMER_COUNTER)
+                        .to("reactive-streams:tick");
             }
         });
 
@@ -185,16 +184,16 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
 
         Publisher<Exchange> timer = crs.from("timer:reactive?period=250&repeatCount=3");
 
-        AtomicInteger value = new AtomicInteger(0);
+        AtomicInteger value = new AtomicInteger();
         CountDownLatch latch = new CountDownLatch(3);
 
         Flux.from(timer)
-            .map(exchange -> ExchangeHelper.getHeaderOrProperty(exchange, Exchange.TIMER_COUNTER, Integer.class))
-            .doOnNext(res -> Assert.assertEquals(value.incrementAndGet(), res.intValue()))
-            .doOnNext(res -> latch.countDown())
-            .subscribe();
+                .map(exchange -> ExchangeHelper.getHeaderOrProperty(exchange, Exchange.TIMER_COUNTER, Integer.class))
+                .doOnNext(res -> assertEquals(value.incrementAndGet(), res.intValue()))
+                .doOnNext(res -> latch.countDown())
+                .subscribe();
 
-        Assert.assertTrue(latch.await(2, TimeUnit.SECONDS));
+        assertTrue(latch.await(2, TimeUnit.SECONDS));
     }
 
     // ************************************************
@@ -208,29 +207,25 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
             @Override
             public void configure() throws Exception {
                 from("direct:source")
-                    .to("direct:stream")
-                    .setBody()
+                        .to("direct:stream")
+                        .setBody()
                         .simple("after stream: ${body}");
             }
         });
 
         crs.process("direct:stream",
-            publisher ->
-                Flux.from(publisher)
-                    .map(e -> {
-                        int i = e.getIn().getBody(Integer.class);
-                        e.getOut().setBody(-i);
+                publisher -> Flux.from(publisher)
+                        .map(e -> {
+                            int i = e.getIn().getBody(Integer.class);
+                            e.getOut().setBody(-i);
 
-                        return e;
-                    }
-                )
-        );
+                            return e;
+                        }));
 
         for (int i = 1; i <= 3; i++) {
-            Assert.assertEquals(
-                "after stream: " + (-i),
-                template.requestBody("direct:source", i, String.class)
-            );
+            assertEquals(
+                    "after stream: " + (-i),
+                    template.requestBody("direct:source", i, String.class));
         }
     }
 
@@ -241,23 +236,20 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
             @Override
             public void configure() throws Exception {
                 from("direct:source")
-                    .to("direct:stream")
-                    .setBody()
+                        .to("direct:stream")
+                        .setBody()
                         .simple("after stream: ${body}");
             }
         });
 
         crs.process("direct:stream",
-            Integer.class,
-            publisher ->
-                Flux.from(publisher).map(Math::negateExact)
-        );
+                Integer.class,
+                publisher -> Flux.from(publisher).map(Math::negateExact));
 
         for (int i = 1; i <= 3; i++) {
-            Assert.assertEquals(
-                "after stream: " + (-i),
-                template.requestBody("direct:source", i, String.class)
-            );
+            assertEquals(
+                    "after stream: " + (-i),
+                    template.requestBody("direct:source", i, String.class));
         }
     }
 
@@ -270,7 +262,7 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
         context.addRoutes(new RouteBuilder() {
             public void configure() {
                 from("reactive-streams:reactive")
-                    .setBody().constant("123");
+                        .setBody().constant("123");
             }
         });
 
@@ -279,12 +271,12 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
         Publisher<Exchange> publisher = crs.toStream("reactive", new DefaultExchange(context));
         Exchange res = Flux.from(publisher).blockFirst();
 
-        Assert.assertNotNull(res);
+        assertNotNull(res);
 
         String content = res.getIn().getBody(String.class);
 
-        Assert.assertNotNull(content);
-        Assert.assertEquals("123", content);
+        assertNotNull(content);
+        assertEquals("123", content);
     }
 
     @Test
@@ -295,13 +287,13 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
         CountDownLatch latch = new CountDownLatch(3);
 
         Flux.just(1, 2, 3)
-            .flatMap(e -> crs.to("bean:hello", e, String.class))
-            .doOnNext(res -> values.add(res))
-            .doOnNext(res -> latch.countDown())
-            .subscribe();
+                .flatMap(e -> crs.to("bean:hello", e, String.class))
+                .doOnNext(values::add)
+                .doOnNext(res -> latch.countDown())
+                .subscribe();
 
-        Assert.assertTrue(latch.await(2, TimeUnit.SECONDS));
-        Assert.assertEquals(new TreeSet<>(Arrays.asList("Hello 1", "Hello 2", "Hello 3")), values);
+        assertTrue(latch.await(2, TimeUnit.SECONDS));
+        assertEquals(new TreeSet<>(Arrays.asList("Hello 1", "Hello 2", "Hello 3")), values);
     }
 
     @Test
@@ -312,15 +304,15 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
         CountDownLatch latch = new CountDownLatch(3);
 
         Flux.just(1, 2, 3)
-            .flatMap(e -> crs.to("bean:hello", e))
-            .map(e -> e.getOut())
-            .map(e -> e.getBody(String.class))
-            .doOnNext(res -> values.add(res))
-            .doOnNext(res -> latch.countDown())
-            .subscribe();
+                .flatMap(e -> crs.to("bean:hello", e))
+                .map(Exchange::getMessage)
+                .map(e -> e.getBody(String.class))
+                .doOnNext(values::add)
+                .doOnNext(res -> latch.countDown())
+                .subscribe();
 
-        Assert.assertTrue(latch.await(2, TimeUnit.SECONDS));
-        Assert.assertEquals(new TreeSet<>(Arrays.asList("Hello 1", "Hello 2", "Hello 3")), values);
+        assertTrue(latch.await(2, TimeUnit.SECONDS));
+        assertEquals(new TreeSet<>(Arrays.asList("Hello 1", "Hello 2", "Hello 3")), values);
     }
 
     @Test
@@ -332,13 +324,13 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
         Function<Object, Publisher<String>> fun = crs.to("bean:hello", String.class);
 
         Flux.just(1, 2, 3)
-            .flatMap(fun)
-            .doOnNext(res -> values.add(res))
-            .doOnNext(res -> latch.countDown())
-            .subscribe();
+                .flatMap(fun)
+                .doOnNext(values::add)
+                .doOnNext(res -> latch.countDown())
+                .subscribe();
 
-        Assert.assertTrue(latch.await(2, TimeUnit.SECONDS));
-        Assert.assertEquals(new TreeSet<>(Arrays.asList("Hello 1", "Hello 2", "Hello 3")), values);
+        assertTrue(latch.await(2, TimeUnit.SECONDS));
+        assertEquals(new TreeSet<>(Arrays.asList("Hello 1", "Hello 2", "Hello 3")), values);
     }
 
     @Test
@@ -350,15 +342,15 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
         Function<Object, Publisher<Exchange>> fun = crs.to("bean:hello");
 
         Flux.just(1, 2, 3)
-            .flatMap(fun)
-            .map(e -> e.getOut())
-            .map(e -> e.getBody(String.class))
-            .doOnNext(res -> values.add(res))
-            .doOnNext(res -> latch.countDown())
-            .subscribe();
+                .flatMap(fun)
+                .map(Exchange::getMessage)
+                .map(e -> e.getBody(String.class))
+                .doOnNext(values::add)
+                .doOnNext(res -> latch.countDown())
+                .subscribe();
 
-        Assert.assertTrue(latch.await(2, TimeUnit.SECONDS));
-        Assert.assertEquals(new TreeSet<>(Arrays.asList("Hello 1", "Hello 2", "Hello 3")), values);
+        assertTrue(latch.await(2, TimeUnit.SECONDS));
+        assertEquals(new TreeSet<>(Arrays.asList("Hello 1", "Hello 2", "Hello 3")), values);
     }
 
     // ************************************************
@@ -372,12 +364,12 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
             @Override
             public void configure() throws Exception {
                 from("direct:reactor")
-                    .to("mock:result");
+                        .to("mock:result");
             }
         });
 
         Flux.just(1, 2, 3)
-            .subscribe(crs.subscriber("direct:reactor", Integer.class));
+                .subscribe(crs.subscriber("direct:reactor", Integer.class));
 
         MockEndpoint mock = getMockEndpoint("mock:result");
         mock.expectedMessageCount(3);
@@ -385,7 +377,7 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
 
         int idx = 1;
         for (Exchange ex : mock.getExchanges()) {
-            Assert.assertEquals(new Integer(idx++), ex.getIn().getBody(Integer.class));
+            assertEquals(Integer.valueOf(idx++), ex.getIn().getBody(Integer.class));
         }
     }
 
@@ -393,18 +385,19 @@ public class ReactorStreamsServiceTest extends ReactorStreamsServiceTestSupport 
     // misc
     // ************************************************
 
-    @Test(expected = IllegalStateException.class)
+    @Test
     public void testOnlyOneCamelProducerPerPublisher() throws Exception {
         context.addRoutes(new RouteBuilder() {
             @Override
             public void configure() throws Exception {
                 from("direct:one")
-                    .to("reactive-streams:stream");
+                        .to("reactive-streams:stream");
                 from("direct:two")
-                    .to("reactive-streams:stream");
+                        .to("reactive-streams:stream");
             }
         });
 
-        context.start();
+        assertThrows(FailedToStartRouteException.class,
+                () -> context.start());
     }
 }
