@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -24,34 +24,34 @@ import org.jsmpp.bean.TypeOfNumber;
 import org.jsmpp.session.BindParameter;
 import org.jsmpp.session.SMPPSession;
 import org.jsmpp.session.SessionStateListener;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 import static org.mockito.ArgumentMatchers.isA;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.verify;
-import static org.mockito.Mockito.verifyNoMoreInteractions;
 import static org.mockito.Mockito.when;
 
 /**
  * JUnit test class for <code>org.apache.camel.component.smpp.SmppProducer</code>
- * 
- * @version 
  */
 public class SmppProducerLazySessionCreationTest {
-    
+
     private SmppProducer producer;
     private SmppConfiguration configuration;
     private SmppEndpoint endpoint;
     private SMPPSession session;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         configuration = new SmppConfiguration();
         configuration.setLazySessionCreation(true);
+        configuration.setServiceType("CMT");
+        configuration.setSystemType("cp");
+        configuration.setPassword("password");
         endpoint = mock(SmppEndpoint.class);
         session = mock(SMPPSession.class);
-        
+
         producer = new SmppProducer(endpoint, configuration) {
             SMPPSession createSMPPSession() {
                 return session;
@@ -60,21 +60,9 @@ public class SmppProducerLazySessionCreationTest {
     }
 
     @Test
-    public void doStartShouldNotCreateTheSmppSession() throws Exception {
-        when(endpoint.getConnectionString()).thenReturn("smpp://smppclient@localhost:2775");
-        when(endpoint.isSingleton()).thenReturn(true);
-
-        producer.doStart();
-
-        verify(endpoint).getConnectionString();
-        verify(endpoint).isSingleton();
-        verifyNoMoreInteractions(endpoint, session);
-    }
-
-    @Test
     public void processShouldCreateTheSmppSession() throws Exception {
         when(endpoint.getConnectionString())
-            .thenReturn("smpp://smppclient@localhost:2775");
+                .thenReturn("smpp://smppclient@localhost:2775");
         BindParameter expectedBindParameter = new BindParameter(
                 BindType.BIND_TX,
                 "smppclient",
@@ -83,8 +71,8 @@ public class SmppProducerLazySessionCreationTest {
                 TypeOfNumber.UNKNOWN,
                 NumberingPlanIndicator.UNKNOWN,
                 "");
-        when(session.connectAndBind("localhost", new Integer(2775), expectedBindParameter))
-            .thenReturn("1");
+        when(session.connectAndBind("localhost", Integer.valueOf(2775), expectedBindParameter))
+                .thenReturn("1");
         when(endpoint.isSingleton()).thenReturn(true);
         SmppBinding binding = mock(SmppBinding.class);
         Exchange exchange = mock(Exchange.class);
@@ -96,20 +84,20 @@ public class SmppProducerLazySessionCreationTest {
         when(in.getHeader("CamelSmppSystemId", String.class)).thenReturn(null);
         when(in.getHeader("CamelSmppPassword", String.class)).thenReturn(null);
         command.execute(exchange);
-        
+
         producer.doStart();
         producer.process(exchange);
-        
+
         verify(session).setEnquireLinkTimer(5000);
         verify(session).setTransactionTimer(10000);
         verify(session).addSessionStateListener(isA(SessionStateListener.class));
-        verify(session).connectAndBind("localhost", new Integer(2775), expectedBindParameter);
+        verify(session).connectAndBind("localhost", Integer.valueOf(2775), expectedBindParameter);
     }
 
     @Test
     public void processShouldCreateTheSmppSessionWithTheSystemIdAndPasswordFromTheExchange() throws Exception {
         when(endpoint.getConnectionString())
-            .thenReturn("smpp://localhost:2775");
+                .thenReturn("smpp://localhost:2775");
         BindParameter expectedBindParameter = new BindParameter(
                 BindType.BIND_TX,
                 "smppclient2",
@@ -118,8 +106,8 @@ public class SmppProducerLazySessionCreationTest {
                 TypeOfNumber.UNKNOWN,
                 NumberingPlanIndicator.UNKNOWN,
                 "");
-        when(session.connectAndBind("localhost", new Integer(2775), expectedBindParameter))
-            .thenReturn("1");
+        when(session.connectAndBind("localhost", Integer.valueOf(2775), expectedBindParameter))
+                .thenReturn("1");
         SmppBinding binding = mock(SmppBinding.class);
         Exchange exchange = mock(Exchange.class);
         Message in = mock(Message.class);
@@ -131,10 +119,10 @@ public class SmppProducerLazySessionCreationTest {
         when(in.getHeader("CamelSmppSystemId", String.class)).thenReturn("smppclient2");
         when(in.getHeader("CamelSmppPassword", String.class)).thenReturn("password2");
         command.execute(exchange);
-        
+
         producer.doStart();
         producer.process(exchange);
-        
-        verify(session).connectAndBind("localhost", new Integer(2775), expectedBindParameter);
+
+        verify(session).connectAndBind("localhost", Integer.valueOf(2775), expectedBindParameter);
     }
 }
