@@ -1,4 +1,4 @@
-/**
+/*
  * Licensed to the Apache Software Foundation (ASF) under one or more
  * contributor license agreements.  See the NOTICE file distributed with
  * this work for additional information regarding copyright ownership.
@@ -20,11 +20,16 @@ import javax.sql.DataSource;
 
 import org.apache.camel.RuntimeCamelException;
 import org.apache.camel.builder.RouteBuilder;
-import org.apache.camel.spring.SpringRouteBuilder;
 import org.apache.camel.spring.SpringTestSupport;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.springframework.context.support.AbstractXmlApplicationContext;
 import org.springframework.context.support.ClassPathXmlApplicationContext;
 import org.springframework.jdbc.core.JdbcTemplate;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 /**
  * For testing with mixed transacted propagation (required, requires new)
@@ -34,13 +39,15 @@ public class MixedPropagationTransactedTest extends SpringTestSupport {
     protected JdbcTemplate jdbc;
     protected boolean useTransactionErrorHandler = true;
 
+    @Override
     protected AbstractXmlApplicationContext createApplicationContext() {
         return new ClassPathXmlApplicationContext(
-            "/org/apache/camel/spring/interceptor/mixedPropagationTransactedTest.xml");
+                "/org/apache/camel/spring/interceptor/mixedPropagationTransactedTest.xml");
     }
 
     @Override
-    protected void setUp() throws Exception {
+    @BeforeEach
+    public void setUp() throws Exception {
         super.setUp();
 
         // create database and insert dummy data
@@ -48,39 +55,48 @@ public class MixedPropagationTransactedTest extends SpringTestSupport {
         jdbc = new JdbcTemplate(ds);
     }
 
+    @Test
     public void testRequiredOnly() throws Exception {
         template.sendBody("direct:required", "Tiger in Action");
 
         int count = jdbc.queryForObject("select count(*) from books", Integer.class);
-        assertEquals(new Integer(1), jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Tiger in Action"));
-        assertEquals("Number of books", 2, count);
+        assertEquals(Integer.valueOf(1),
+                jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Tiger in Action"));
+        assertEquals(2, count, "Number of books");
     }
 
+    @Test
     public void testRequired2Only() throws Exception {
         template.sendBody("direct:required2", "Tiger in Action");
 
         int count = jdbc.queryForObject("select count(*) from books", Integer.class);
         // we do 2x the book service so we should get 2 tiger books
-        assertEquals(new Integer(2), jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Tiger in Action"));
-        assertEquals("Number of books", 3, count);
+        assertEquals(Integer.valueOf(2),
+                jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Tiger in Action"));
+        assertEquals(3, count, "Number of books");
     }
 
+    @Test
     public void testRequiresNewOnly() throws Exception {
         template.sendBody("direct:new", "Elephant in Action");
 
         int count = jdbc.queryForObject("select count(*) from books", Integer.class);
-        assertEquals(new Integer(1), jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Elephant in Action"));
-        assertEquals("Number of books", 2, count);
+        assertEquals(Integer.valueOf(1),
+                jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Elephant in Action"));
+        assertEquals(2, count, "Number of books");
     }
 
+    @Test
     public void testRequiredAndRequiresNew() throws Exception {
         template.sendBody("direct:requiredAndNew", "Tiger in Action");
 
         int count = jdbc.queryForObject("select count(*) from books", Integer.class);
-        assertEquals(new Integer(2), jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Tiger in Action"));
-        assertEquals("Number of books", 3, count);
+        assertEquals(Integer.valueOf(2),
+                jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Tiger in Action"));
+        assertEquals(3, count, "Number of books");
     }
 
+    @Test
     public void testRequiredOnlyRollback() throws Exception {
         try {
             template.sendBody("direct:required", "Donkey in Action");
@@ -93,10 +109,12 @@ public class MixedPropagationTransactedTest extends SpringTestSupport {
         }
 
         int count = jdbc.queryForObject("select count(*) from books", Integer.class);
-        assertEquals(new Integer(0), jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Donkey in Action"));
-        assertEquals("Number of books", 1, count);
+        assertEquals(Integer.valueOf(0),
+                jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Donkey in Action"));
+        assertEquals(1, count, "Number of books");
     }
 
+    @Test
     public void testRequiresNewOnlyRollback() throws Exception {
         try {
             template.sendBody("direct:new", "Donkey in Action");
@@ -109,10 +127,12 @@ public class MixedPropagationTransactedTest extends SpringTestSupport {
         }
 
         int count = jdbc.queryForObject("select count(*) from books", Integer.class);
-        assertEquals(new Integer(0), jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Donkey in Action"));
-        assertEquals("Number of books", 1, count);
+        assertEquals(Integer.valueOf(0),
+                jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Donkey in Action"));
+        assertEquals(1, count, "Number of books");
     }
 
+    @Test
     public void testRequiredAndNewRollback() throws Exception {
         try {
             template.sendBody("direct:requiredAndNewRollback", "Tiger in Action");
@@ -124,35 +144,38 @@ public class MixedPropagationTransactedTest extends SpringTestSupport {
         }
 
         int count = jdbc.queryForObject("select count(*) from books", Integer.class);
-        assertEquals(new Integer(1), jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Tiger in Action"));
-        assertEquals(new Integer(0), jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Donkey in Action"));
+        assertEquals(Integer.valueOf(1),
+                jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Tiger in Action"));
+        assertEquals(Integer.valueOf(0),
+                jdbc.queryForObject("select count(*) from books where title = ?", Integer.class, "Donkey in Action"));
         // the tiger in action should be committed, but our 2nd route should rollback
-        assertEquals("Number of books", 2, count);
+        assertEquals(2, count, "Number of books");
     }
 
+    @Override
     protected RouteBuilder createRouteBuilder() throws Exception {
-        return new SpringRouteBuilder() {
+        return new RouteBuilder() {
             public void configure() throws Exception {
                 from("direct:required")
-                    .transacted("PROPATATION_REQUIRED")
-                    .bean("bookService");
+                        .transacted("PROPATATION_REQUIRED")
+                        .bean("bookService");
 
                 from("direct:required2")
-                    .transacted("PROPATATION_REQUIRED")
-                    .bean("bookService")
-                    .bean("bookService");
+                        .transacted("PROPATATION_REQUIRED")
+                        .bean("bookService")
+                        .bean("bookService");
 
                 from("direct:new")
-                    .transacted("PROPAGATION_REQUIRES_NEW")
-                    .bean("bookService");
+                        .transacted("PROPAGATION_REQUIRES_NEW")
+                        .bean("bookService");
 
                 from("direct:requiredAndNew").to("direct:required", "direct:new");
 
                 from("direct:requiredAndNewRollback")
-                    .to("direct:required")
-                    // change to donkey so it will rollback
-                    .setBody(constant("Donkey in Action"))
-                    .to("direct:new");
+                        .to("direct:required")
+                        // change to donkey so it will rollback
+                        .setBody(constant("Donkey in Action"))
+                        .to("direct:new");
             }
         };
     }
